theme: Make th padding match td to fix table alignment

--- a/themes/mongodb/src/css/basic.css
+++ b/themes/mongodb/src/css/basic.css
@@ -324,7 +324,6 @@ table.docutils {
 }
 
 table.docutils td, table.docutils th {
-    padding: 1px 8px 1px 5px;
     border-top: 0;
     border-left: 0;
     border-right: 0;
