--- a/themes/mongodb/src/css/manual/mongodb-docs.css
+++ b/themes/mongodb/src/css/manual/mongodb-docs.css
@@ -283,14 +283,13 @@ table.docutils {
     line-height: 24px;
 }
 
-table.docutils td { padding: 11px 5px 12px; }
-
 table.docutils > thead th.head {
     padding: 0 5px 12px;
 }
 
 table.docutils td, table.docutils th {
     border-color: #ebebed;
+    padding: 11px 5px 12px;
 }
 
 table.index-table td {
